# imp

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md
imp_bridge_pangolin/: CMakeLists.txt  package.xml
imp_bridge_ros/: CMakeLists.txt  package.xml
imp_cmake/: CMakeLists.txt  package.xml
imp_cmake/cmake/: imp_cmake-extras.cmake.develspace.in  imp_cmake-extras.cmake.installspace.in
imp_cmake/cmake/macros/: imp_finders.cmake  imp_macros.cmake
imp_core/: CMakeLists.txt  package.xml
imp_core/include/imp/core/: exception.hpp  image.hpp  image_base.hpp  image_raw.hpp  linearmemory.hpp  linearmemory_base.hpp  macros.hpp  memory_storage.hpp  pixel.hpp  roi.hpp  size.hpp  timer.hpp
imp_core/src/: cv_connector_pixel_types.cpp  image_raw.cpp  linearmemory.cpp
imp_core/test/: linearmemory_test.cpp  roi_test.cpp  single_shot_timer_test.cpp
imp_cu_correspondence/: CMakeLists.txt  package.xml
imp_cu_correspondence/include/imp/cu_correspondence/: solver_epipolar_stereo_precond_huber_l1.cuh  solver_stereo_abstract.hpp  solver_stereo_huber_l1.cuh  solver_stereo_precond_huber_l1.cuh  solver_stereo_precond_huber_l1_weighted.cuh  stereo_ctf_warping.hpp  stereo_ctf_warping_level_huber_l1.cuh  stereo_ctf_warping_level_precond_huber_l1.cuh  variational_epipolar_stereo.hpp  variational_stereo.hpp  variational_stereo_parameters.hpp
imp_cu_correspondence/src/: cu_k_stereo_ctf_warping_level_huber_l1.cuh  k_epipolar_stereo_precond_huber_l1.cu  occlusion.cu  occlusion_kernel.cuh  solver_epipolar_stereo_precond_huber_l1.cu  solver_epipolar_stereo_precond_huber_l1_kernel.cuh  solver_precond_huber_l1_kernel.cuh  solver_stereo_huber_l1.cu  solver_stereo_huber_l1_kernel.cuh  solver_stereo_precond_huber_l1.cu  solver_stereo_precond_huber_l1_weighted.cu  solver_stereo_precond_huber_l1_weighted_kernel.cuh  stereo_ctf_warping.cpp  stereo_ctf_warping_level_huber_l1.cu  stereo_ctf_warping_level_precond_huber_l1.cu  stereo_ctf_warping_level_precond_huber_l1_weighted.cu  variational_epipolar_stereo.cpp  variational_stereo.cpp  warped_gradients_kernel.cuh
imp_cu_imgproc/: CMakeLists.txt  package.xml
imp_cu_imgproc/include/imp/cu_imgproc/: cu_image_transform.cuh  cu_rof_denoising.cuh  cu_tvl1_denoising.cuh  cu_variational_denoising.cuh  edge_detectors.cuh  image_pyramid.hpp  iterative_kernel_calls.cuh
imp_cu_imgproc/src/: cu_gauss_filter.cu  cu_image_filter.cu  cu_image_transform.cu  cu_median3x3_filter.cu  cu_natural_edges.cu  cu_reduce.cu  cu_resample.cu  cu_rof_denoising.cu  cu_tvl1_denoising.cu  edge_detectors.cu  gauss_filter.cu  image_pyramid.cpp  iterative_kernel_calls.cu  median3x3_filter.cu  natural_edges.cu  reduce.cu
imp_cu_imgproc/src/image_filter/: cu_edge_impl.cu  cu_median3x3_impl.cu
imp_cu_imgproc/src/image_transform/: cu_reduce_impl.cu  cu_remap_impl.cu  cu_resample_impl.cu
imp_cucore/: CMakeLists.txt  package.xml
imp_cucore/include/imp/cucore/: cu_image_gpu.cuh  (+1 more)
imp_cucore/src/math/: cu_min_max_impl.cu
imp_cuimgproc/: CMakeLists.txt  package.xml
imp_cuimgproc/src/: cu_rof_denoising.cu  cu_tvl1_denoising.cu  image_pyramid.cpp
imp_cuimgproc/src/image_filter/: cu_bilateral_impl.c
imp_cuimgproc/src/image_transform/: cu_reduce_impl.cu
imp_image/: CMakeLists.txt  package.xml
imp_image/src/: image_raw.cpp
imp_test_package/: CMakeLists.txt  package.xml
imp_test_package/src/: kernel_reduce.cu  main.cu  test_reduce.cpp
modules/: CMakeLists.txt
modules/bridge/opencv/: CMakeLists.txt  package.xml
modules/bridge/ros/: CMakeLists.txt  package.xml
modules/core/: CMakeLists.txt  package.xml
modules/core/src/: core.cpp  image_cv.cpp  image_pyramid.cpp  image_raw.cpp  linearhostmemory.cpp  linearmemory.cpp  setvalue.cpp
modules/core/test/: size_test.cpp
modules/cucore/: CMakeLists.txt  package.xml
modules/cucore/src/: cu_image_gpu.cu  cu_image_raw.cu  cu_linearmemory.cu  cu_math.cu  cu_pixel_conversion.cpp
modules/cudepth/: CMakeLists.txt  package.xml
modules/cudepth/src/: cu_k_stereo_ctf_warping_level_huber.cuh  cu_k_stereo_ctf_warping_level_huber_l1.cuh  cu_k_stereo_ctf_warping_level_precond_huber_l1.cuh  cu_k_stereo_ctf_warping_level_precond_huber_l1_weighted.cuh  cu_k_warped_gradients.cuh  k_epipolar_stereo_precond_huber_l1.cu  solver_epipolar_stereo_precond_huber_l1.cu  stereo_ctf_warping.cpp  stereo_ctf_warping_level.cpp  stereo_ctf_warping_level_huber.cpp  stereo_ctf_warping_level_huber.cu  stereo_ctf_warping_level_huber_l1.cu  stereo_ctf_warping_level_precond_huber_l1.cu  stereo_ctf_warping_level_precond_huber_l1_weighted.cu  variational_epipolar_stereo.cpp  variational_stereo.cpp
modules/cuimgproc/: CMakeLists.txt  package.xml
modules/cuimgproc/src/: cu_image_filter.cu  cu_image_transform.cu  cu_rof_denoising.cu  cu_tvl1_denoising.cu  cu_variational_denoising.cu  image_pyramid.cpp
modules/cuimgproc/test/: cu_rof_denoising_test.cpp  image_filter_gauss_test.cpp  image_filter_median3x3_test.cpp  image_pyramid_test.cpp  natural_edges_test.cpp
modules/imp_core/src/: image_cv.cpp  linearmemory.cpp
modules/imp_cucore/src/: cu_pixel_conversion.cpp
modules/imp_cuimgproc/src/: edge_detectors.cu
modules/io/: CMakeLists.txt  package.xml
modules/io/src/: opencv_bridge.cpp
ros/rof_denoising/: CMakeLists.txt  package.xml
ros/rof_denoising/src/: rof_node.cpp
ros/ros_denoising/: CMakeLists.txt  package.xml
ros/ros_denoising/cfg/: rof.cfg
ros/ros_denoising/src/: rof.cpp  rof_node.cpp
showcase/: CMakeLists.txt  iterative_kernel_calls.cu  iterative_kernel_calls.cuh  texture_issue.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  default_msg.h  image_raw_test.cpp  linearhostmemory_test.cpp  linearhostmemory_unittest.cpp  roi_test.cpp  size_test.cpp
tests/cucore/: CMakeLists.txt  cu_image_gpu_test.cpp  cu_image_gpu_test.cu  cu_linearmemory_test.cpp  cu_linearmemory_test.cu
tests/cudepth/: CMakeLists.txt  variational_stereo_test.cpp
tests/cuimgproc/: CMakeLists.txt  cu_rof_denoising_test.cpp  image_filter_gauss_test.cpp  image_filter_median3x3_test.cpp  image_pyramid_test.cpp
(+192 files in other folders)
