<?xml version="1.0"?>
<package>
  <name>imp_bridge_ros</name>
  <description>
    IMP bridge to Ros adds the ability to interconnect with the Ros framework
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>image_transport</build_depend>
    
  <build_depend>imp_cmake</build_depend>
  <build_depend>imp_core</build_depend>
  <run_depend>imp_core</run_depend>
  <build_depend>imp_cucore</build_depend>
  <run_depend>imp_cucore</run_depend>

  <test_depend>gtest</test_depend>
</package>
