<?xml version="1.0"?>
<package>
  <name>imp_cucore</name>
  <description>
    IMP core module for GPGPU processing (CUDA)
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>imp_cmake</build_depend>
  <build_depend>imp_core</build_depend>
  <run_depend>imp_core</run_depend>
    
  <test_depend>gtest</test_depend>
</package>
