<?xml version="1.0"?>
<package format="2">
  <name>imp_test_package</name>
  <description>
    imp_test_package
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <maintainer email="michael.gassner@epfl.ch">michael gassner</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>imp_cmake</depend>
  <depend>imp_core</depend>
  <depend>imp_cu_core</depend>
  <depend>vikit_common</depend>

 </package>
